--- a/3-flux-git-repo-config.yaml
+++ b/3-flux-git-repo-config.yaml
@@ -10,4 +10,4 @@ spec:
     branch: main
   secretRef:
     name: flux-system
-  url: https://github.com/kalebpederson/aks-policy-governance-3-flux-git-repo-config
+  url: https://github.com/kalebpederson/aks-policy-governance-3-flux-git-repo-config.git
